--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
 
     <header>
 
+        <div class="sfondo">
+            <img class="logo" src="./img/logo.svg" alt="">
+        </div>
+
+        <h1>
+            Internet deve essere al servizio del "bene pubblico": Il manifesto di Tim Berners-Lee
+        </h1>
+
+        <p class="autore">
+            Scritto da Booleaner 
+        </p>
+
+        <p class="data">
+            il 10/10/2020
+        </p>
+
+        <div>
+            <img src="./img/tim-1.jpg" alt="Foto di Tim 1">
+            <img src="./img/tim-2.jpg" alt="Foto di Tim 2">
+        </div>
+
+        <p class="descrizione-foto">
+            1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
+            2nd Photo: Wikimedia, by Paul Clarke
+        </p>
     
 
     </header>
