fine sezione testo ed elenco

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </h1>
 
         <p class="autore">
-            Scritto da Booleaner 
+            Scritto da <span class="booleaner">Booleaner</span> 
         </p>
 
         <p class="data">
@@ -37,10 +37,40 @@
             2nd Photo: Wikimedia, by Paul Clarke
         </p>
     
-
     </header>
 
     <main>
+
+        <!-- sezione testo -->
+        <section>
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non facilis quae, in impedit dicta blanditiis explicabo aspernatur voluptates eligendi magni minima vero cumque assumenda inventore nostrum. Repudiandae neque cum ut.
+                Rerum,<span id="underline">mollitia ipsam commodi saepe sequi dolorum quibusdam rem molestias</span>  vero dolore quia dolores voluptatem provident modi, cumque iusto pariatur laboriosam voluptatum? Impedit iste fugiat quae quaerat eos quasi recusandae?
+            </p>
+
+        </section>
+
+        <!-- sezione elenco -->
+        <section>
+
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia repellendus ab non aut rerum obcaecati ipsam vero voluptates magnam tempora modi, ad, quibusdam libero eos minima. Dolorum ducimus sapiente tempora?</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, cupiditate placeat, beatae rerum expedita iste harum molestiae aperiam nesciunt laborum aliquam omnis delectus, sint ad quod vero quos tenetur illo!</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut atque hic nisi beatae veritatis nesciunt reprehenderit sed adipisci. Consequuntur sit aliquam necessitatibus, nobis nesciunt sint quia nihil reprehenderit doloribus voluptatum.</li>
+            </ul>
+
+        </section>
+
+        <!-- sezione tabella -->
+        <section>
+
+        </section>
+
+        <!-- sezione testo -->
+        <section>
+
+        </section>
 
     </main>
 
