fine sezione tabella

--- a/index.html
+++ b/index.html
@@ -65,6 +65,36 @@
         <!-- sezione tabella -->
         <section>
 
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lorem Ipsum Dolor</th>
+                        <th>Lorem Ipsum Dolor</th>
+                        <th>Lorem Ipsum Dolor</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam consequuntur animi quae. Voluptate eum, soluta doloribus omnis hic accusamus voluptas, dolorum quia dolores tempore eaque voluptatem veniam, inventore aliquam magni.</td>
+                    </tr>
+
+                    <tr>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam consequuntur animi quae. Voluptate eum, soluta doloribus omnis hic accusamus voluptas, dolorum quia dolores tempore eaque voluptatem veniam, inventore aliquam magni.</td>
+                    </tr>
+
+                    <tr>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam consequuntur animi quae. Voluptate eum, soluta doloribus omnis hic accusamus voluptas, dolorum quia dolores tempore eaque voluptatem veniam, inventore aliquam magni.</td>
+                    </tr>
+                </tbody>
+            </table>
+
         </section>
 
         <!-- sezione testo -->
