--- a/index.html
+++ b/index.html
@@ -100,11 +100,26 @@
         <!-- sezione testo -->
         <section>
 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, veniam dolore eius aut vel natus voluptate ipsam facere illo doloremque eaque obcaecati quod dicta. Tenetur est saepe dolorem beatae iusto!
+            Earum recusandae, suscipit <span id="underline">illo perferendis dolorum molestias eius dignissimos, praesentium ab ullam maxime quos sequi culpa doloremque amet atque, exercitationem quo eaque repellat. Magni ex officiis aliquid</span>. Debitis, expedita provident.</p>
+                
         </section>
 
     </main>
 
     <footer>
+
+        <h3>Potrebbero Interessarti</h3>
+
+        <div class="image-container">
+            <img src="./img/graph.jpg" alt="Immagine grafico">
+            <div class="image-text">Lorem Ipsum Dolor</div>
+          </div>
+
+          <div class="image-container">
+            <img src="./img/monitor.jpg" alt="Immagine monitor">
+            <div class="image-text">Lorem Ipsum Dolor</div>
+          </div>
 
     </footer>
     
